--- a/Dockerfile.legacy
+++ b/Dockerfile.legacy
@@ -16,8 +16,13 @@ RUN apt-get update && apt-get install -y software-properties-common && \
     git \
     curl \
     wget \
-    cmake \
     vim
+
+# Install specific CMake version (3.10 is too old)
+RUN wget https://github.com/Kitware/CMake/releases/download/v3.22.1/cmake-3.22.1-linux-x86_64.sh \
+    && chmod +x cmake-3.22.1-linux-x86_64.sh \
+    && ./cmake-3.22.1-linux-x86_64.sh --skip-license --prefix=/usr/local \
+    && rm cmake-3.22.1-linux-x86_64.sh
 
 # Set GCC 10 as default
 RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 100 --slave /usr/bin/g++ g++ /usr/bin/g++-10
